# bwi_nav_reasoning

./: CMakeLists.txt  package.xml
domain/: rules.plog
launch/: real.launch  sim.launch
maps/3ne/: coordinates_real.yaml  map_static.txt  map_sunny.txt
maps/simulation/corridors/: coordinates_sim.yaml  map_static.txt
src/: DomainParser.cpp  DomainParser.h  Driver.cpp  NavMdp.cpp  NavMdp.h  test.cpp  z.txt
